--- a/css/imports.css
+++ b/css/imports.css
@@ -3,3 +3,7 @@
 @import url('./reset.css');
 @import url('./variables.css');
 @import url('./sign-up.css');
+
+@import url('./login.css');
+
+@import url('./work-space.css');
