--- a/css/work-space.css
+++ b/css/work-space.css
@@ -1,22 +1,87 @@
 @charset "UTF-8";
 
+.word-space-body {
+    background-color: var(--form-background-color);
+    color: #F4F4F4;
+}
+
 .header-work-space {
+    padding: 0px 10px;
+    margin-bottom: 30px;
+}
+
+.header-work-space-content {
+    height: 55px;
+
+    margin-top: 20px;
+    padding: 0px 20px 0px 15px;
+
+    border-radius: 25px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     background-color: var(--sign-up-login-background-color);
 }
+
 .logo {
+    font-family: "Miltonian";
+    font-size: 1.3em;
+    letter-spacing: 3px;
 }
+
 .user-profile {
-    width: 50px;
-    height: 50px;
+    width: 33px;
+    height: 33px;
 
     border-radius: 50%;
 
     background-color: red;
 }
+
 .main-content-work-space {
+    padding: 0px 20px;
 }
+
 .header-main-content {
+    margin-bottom: 30px;
 }
+
+.header-main-content__content-1 {
+    margin-bottom: 30px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-main-content__content-2 {
+    position: relative;
+}
+
+.header-main-content__content-2 > input {
+    width: 100%;
+    height: 40px;
+
+    border-radius: 30px;
+    padding-left: 40px;
+    padding-right: 15px;
+
+    font-size: 1.1em;
+
+    color: white;
+    background-color: var(--sign-up-login-background-color);
+}
+
+.header-main-content__content-2 > i {
+    position: absolute;
+    left: 15px;
+    top: 13px;
+
+    color: blue;
+}
+
 .unfinished-plans-section {
 }
 .slider {
@@ -25,7 +90,18 @@
 }
 .plan-1 {
 }
+
 .unfinished-plan-1 {
+    width: 140px;
+    height: 90px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 15px;
+
+    background-color: var(--sign-up-login-background-color);
 }
 .finished-plans-section {
 }
