--- a/css/imports.css
+++ b/css/imports.css
@@ -2,7 +2,7 @@
 
 @import url('./reset.css');
 @import url('./variables.css');
-@import url('./sign-up.css');
+@import url('./index.css');
 
 @import url('./login.css');
 
