--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .fundo {
-    background-color: var(--sign-up-login-background-color);
+    background-color: var(--background-color-1);
 }
 
 .login-main-content {
@@ -18,7 +18,7 @@
     height: 340px;
 
     border-radius: 25px;
-    border: 1px solid white;
+    border: 1px solid var(--default-color-1);
 
     display: flex;
     flex-direction: column;
@@ -26,8 +26,8 @@
 
     position: relative;
 
-    color: white;
-    background-color: var(--form-background-color);
+    color: var(--default-color-1);
+    background-color: var(--background-color-2);
 }
 
 .login-title {
@@ -51,6 +51,7 @@
 
 .login-input-container > label {
     font-size:.9em;
+    letter-spacing: 1px;
 }
 
 .login-input-container > input {
@@ -61,9 +62,9 @@
     padding-left: 3px;
     font-size: 1.1em;
 
-    color: white;
+    color: var(--default-color-1);
     background-color: transparent;
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid var(--default-color-1);
 }
 
 .eye-icon {
@@ -90,8 +91,8 @@
     cursor: pointer;
     border-radius: 10px;
 
-    color: white;
-    background-color: var(--button-background-color);
+    color: var(--default-color-1);
+    background-color: var(--background-color-3);
 }
 
 .sign-up-page-button {
@@ -123,6 +124,6 @@
     letter-spacing: 1px;
     font-size: .8em;
 
-    color: white;
+    color: var(--default-color-1);
     font-family: "Signika", sans-serif;
 }
