--- a/css/login.css
+++ b/css/login.css
@@ -1,19 +1,6 @@
 @charset "UTF-8";
 
-.fundo {
-    background-color: var(--background-color-1);
-}
-
-.login-main-content {
-    width: 100vw;
-    height: 100vh;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.login-content-container {
+.l-login-main-content {
     width: 330px;
     height: 340px;
 
@@ -30,93 +17,13 @@
     background-color: var(--background-color-2);
 }
 
-.login-title {
-    margin: 15px 0px;
-    letter-spacing: 2px;
-
-    font-family: "Manrope", sans-serif;
-}
-
-.login-form {
-    width: inherit;
-    padding: 0px 15px;
-    margin-bottom: 15px;
-}
-
 .login-input-container {
     position: relative;
     display: flex;
     flex-direction: column;
 }
 
-.login-input-container > label {
-    font-size:.9em;
-    letter-spacing: 1px;
-}
-
-.login-input-container > input {
-    width: 100%;
-    height: 40px;
-
-    margin-bottom: 20px;
-    padding-left: 3px;
-    font-size: 1.1em;
-
-    color: var(--default-color-1);
-    background-color: transparent;
-    border-bottom: 3px solid var(--default-color-1);
-}
-
-.eye-icon {
-    font-size: .9em;
-
-    position: absolute;
-    right: 10px;
-    bottom: 40px;
-}
-
-.form-login-button {
-    width: 300px;
-    height: 45px;
-
-    margin-bottom: 30px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 1.2em;
-    font-family: "Signika", sans-serif;
-
-    cursor: pointer;
-    border-radius: 10px;
-
-    color: var(--default-color-1);
-    background-color: var(--background-color-3);
-}
-
-.sign-up-page-button {
-    width: 75px;
-
-    position: absolute;
-    top: 97.5%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.sign-up-page-button > img {
-    width: inherit;
-    height: inherit;
-
-    position: absolute;
-    z-index: 0;
-
-}
-
-.sign-up-page-button > p {
+.c-btn-change-entry > p {
     margin-bottom: -1px;
     margin-left: 10px;
 
