--- a/css/login.css
+++ b/css/login.css
@@ -23,7 +23,19 @@
     flex-direction: column;
 }
 
-.c-btn-change-entry > p {
+.c-btn-change-entry-login {
+    width: 75px;
+
+    position: absolute;
+    top: 97.5%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.c-btn-change-entry-login > p {
     margin-bottom: -1px;
     margin-left: 10px;
 
