--- a/css/work-space.css
+++ b/css/work-space.css
@@ -56,6 +56,7 @@
 
 .header__content-container {
     margin-bottom: 30px;
+    padding-right: 19px;
 
     display: flex;
     align-items: center;
